third_party/move/move-compiler-v2/tests/checking/typing/exp_list_nested.exp

Diagnostics:
error: the function returns 3 arguments but 2 were provided
  ┌─ tests/checking/typing/exp_list_nested.move:6:9
  │
6 │         (0, (S{}, R{}))
  │         ^^^^^^^^^^^^^^^
